--- a/css/main.css
+++ b/css/main.css
@@ -793,6 +793,10 @@ section,
   font-size: 18px;
 }
 
+.about img {
+  border-redius: 6px;
+}
+
 /*--------------------------------------------------------------
 # Resume Section
 --------------------------------------------------------------*/
